feat: created clone v2 of api

--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "start": "next start",
     "lint": "next lint",
     "json-server": "json-server --watch data/data.json --port 3001",
-    "test-e2e": "cp ./data.empty.json data/data.json && npx playwright test && cp ./data.empty.json data/data.jsont",
+    "test-e2e": "cp ./data.empty.json data/data.json && npx playwright test && cp ./data.empty.json data/data.json",
     "test-e2e-ui": "cp ./data.empty.json data/data.json && npx playwright test --ui && cp ./data.empty.json data/data.json",
-    "test": "cp ./data.test.json data/data.json && jest && cp ./data.empty.json data/data.json"
+    "test": "npm run testv1 && npm run testv2",
+    "testv1": "cp ./data.test.json data/data.json && jest __tests__/integration/api.spec.ts && cp ./data.empty.json data/data.json",
+    "testv2": "cp ./data.v2.test.json data/data.json && jest __tests__/integration/api.v2.spec.ts && cp ./data.empty.json data/data.json"
   },
   "dependencies": {
     "@types/node": "18.15.11",
